Created get blog posts functions and create new blog post function

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Sami Zakir Ahmed",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
