--- a/package.json
+++ b/package.json
@@ -6,12 +6,22 @@
   "author": "Sami Zakir Ahmed",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.3.3",
+    "@types/passport": "^1.0.12",
     "concurrently": "^8.2.0",
     "nodemon": "^2.0.22",
     "typescript": "^5.1.6"
